Fix z-index, UI positioning madness

--- a/css/M.css
+++ b/css/M.css
@@ -37,10 +37,7 @@ canvas {
 }
 
 #ui {
-    position: absolute;
     z-index: 101;
-    height: 100%;
-    width: 100%;
 }
 
 .loader {
@@ -170,11 +167,4 @@ canvas {
 
 body {
     font-family: 'Share Tech Mono';
-}
-
-#ui {
-    position: absolute;
-    z-index: 101;
-    height: 100vh;
-    /* width: 100%; */
 }
