--- a/css/UserInterface.css
+++ b/css/UserInterface.css
@@ -4,7 +4,15 @@
 
 .main-menu {
     margin: 1rem;
+    width: 100%;
+    height: 100vh;
     text-align: center;
+}
+
+.in-game-container {
+    position: absolute;
+    z-index: 101;
+    height: 100vh;
 }
 
 .game-title {
